package org.pentakill.business;

public class PaymentMethod {

    public boolean payOrder(){
        return false;
    }
}
