package org.pentakill.business;

public class ShoppingCart {
}
